force-app/main/default/objects/Strategy__c/Strategy__c.object-meta.xml
<CustomObject>
    <description>[5/11/15, JK]: Created per Frank Nardi&#39;s request. This object relates to the Account Plan.</description>
    <label>iMC Strategy</label>
    <nameField>
        <label>iMC Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iMC Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>