force-app/main/default/objects/Strategy__c/fields/Client_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Client_Initiatives__c</fullName>
    <label>Client Initiatives</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>