force-app/main/default/objects/Strategy__c/fields/Client_Issues_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Client_Issues_Pain_Points__c</fullName>
    <label>Client Issues / Pain Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>