force-app/main/default/objects/Strategy__c/fields/iMC_Strategy_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Strategy_Record_ID__c</fullName>
    <label>iMC Strategy Record ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>