force-app/main/default/objects/Strategy__c/fields/Solution_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Solution_Narrative__c</fullName>
    <label>Solution Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>