force-app/main/default/objects/Strategy__c/fields/Target_I_erarchy__c.field-meta.xml
<CustomField>
    <fullName>Target_I_erarchy__c</fullName>
    <description>[5/20/15, JK]: Created per Caitlin&#39;s request.</description>
    <label>Target I-erarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Intentional</fullName>
            </value>
            <value>
                <fullName>Immersed</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Innovative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>